# ChangeLog for app-dicts/mecab-ipadic
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-dicts/mecab-ipadic/ChangeLog,v 1.26 2010/05/02 11:02:21 aballier Exp $

  02 May 2010; Alexis Ballier <aballier@gentoo.org>
  mecab-ipadic-2.7.0.20070801.ebuild:
  keyword ~x86-fbsd

  14 Jan 2010; Jeroen Roovers <jer@gentoo.org>
  mecab-ipadic-2.7.0.20070801.ebuild:
  Stable for HPPA too.

  27 Dec 2009; Raúl Porcel <armin76@gentoo.org>
  mecab-ipadic-2.7.0.20060707.ebuild, mecab-ipadic-2.7.0.20070610.ebuild,
  mecab-ipadic-2.7.0.20070801.ebuild:
  Add ~arm

  13 Mar 2009; Jeroen Roovers <jer@gentoo.org>
  mecab-ipadic-2.7.0.20070801.ebuild:
  Marked ~hppa (bug #260777).

  05 Dec 2008; Raúl Porcel <armin76@gentoo.org>
  mecab-ipadic-2.7.0.20070801.ebuild:
  ia64/sparc stable wrt #245176

  03 Dec 2008; Brent Baude <ranger@gentoo.org>
  mecab-ipadic-2.7.0.20070801.ebuild:
  Marking mecab-ipadic-2.7.0.20070801 ppc64 for bug 245176

  29 Nov 2008; Tobias Scherbaum <dertobi123@gentoo.org>
  mecab-ipadic-2.7.0.20070801.ebuild:
  ppc stable, bug #245176

  28 Nov 2008; Markus Meier <maekke@gentoo.org>
  mecab-ipadic-2.7.0.20070801.ebuild:
  amd64/x86 stable, bug #245176

  18 Jul 2008; Stephanie Lockwood-Childs <wormo@gentoo.org>
  mecab-ipadic-2.7.0.20070610.ebuild:
  stable on ppc (needed for bug #228387)

  03 Oct 2007; Tom Gall <tgall@gentoo.org>
  mecab-ipadic-2.7.0.20070610.ebuild:
  stable on ppc64

  09 Sep 2007; Akinori Hattori <hattya@gentoo.org>
  mecab-ipadic-2.7.0.20070610.ebuild:
  stable on ia64.

  09 Sep 2007; Akinori Hattori <hattya@gentoo.org>
  mecab-ipadic-2.7.0.20070610.ebuild:
  stable on x86.

  25 Aug 2007; Steve Dibb <beandog@gentoo.org>
  mecab-ipadic-2.7.0.20070610.ebuild:
  amd64 stable

*mecab-ipadic-2.7.0.20070801 (09 Aug 2007)

  09 Aug 2007; Akinori Hattori <hattya@gentoo.org>
  +mecab-ipadic-2.7.0.20070801.ebuild:
  new upstream release.
