@@ -6,13 +6,13 @@ DIST mecab-ipadic-2.7.0-20070610.tar.gz 12125695 RMD160 d402f7b4eef1b169e1d49810
 DIST mecab-ipadic-2.7.0-20070801.tar.gz 12208105 RMD160 8c774433a555e4947a6af80c436e9b40631bda45 SHA1 0d9d021853ba4bb4adfa782ea450e55bfe1a229b SHA256 b62f527d881c504576baed9c6ef6561554658b175ce6ae0096a60307e49e3523
 EBUILD mecab-ipadic-2.7.0.20060707.ebuild 735 RMD160 5f49b91db94c2febc6f306ad67fdbb80b481d483 SHA1 76c133105305c76237c29e7ad7015b87fb38ad96 SHA256 91d1824b380b087cf811c7bc4d84c2e66d57bfae8ed870743516fae274c9a212
 EBUILD mecab-ipadic-2.7.0.20070610.ebuild 738 RMD160 01b26f10c19c477950051c941b6393d317ddb1c0 SHA1 c35a178e689e385f0f4f075d2bc129ad50f58006 SHA256 11292d4c21134cb7ca6de4b6e441c853608ed939900249b8ea9b3d169c55920c
-EBUILD mecab-ipadic-2.7.0.20070801.ebuild 754 RMD160 b7086082a0d1f89d216f93e99221f8393beccace SHA1 26e043aa8acb329b56192652abeef2e3a7d9411e SHA256 7f2c0bc25e38e0d996576cdf3f155e5d3cca429514c4477d917f82fe4c30994d
-MISC ChangeLog 3496 RMD160 1d82c4d922b235bf3720d960c603dd58cd0caf9d SHA1 5480cb7bac99c15c4103f482a4958610c853111f SHA256 99293fe8851abb9e9678516eb457cd935c60a586c8085985909575c0cedab813
+EBUILD mecab-ipadic-2.7.0.20070801.ebuild 767 RMD160 8a9c2e329fee34f45b961c584bc1a535e8eb6d87 SHA1 7e56edb5513691590e5c364f7dcc8b1b903eeec6 SHA256 e43d2651b9a9e87ad8d958c619b27f0dbd08cbf4f7e567ad14d3521a2e75377c
+MISC ChangeLog 3609 RMD160 25a6462bd3daf56c8f7c93c044b9870b9aeae64b SHA1 773cbb3af088c6f77b3e39d4854a31a727bf4cce SHA256 8ffa975c098199061ead01b51dbe869fc18461ef075635278b60ff40e0c1088f
 MISC metadata.xml 228 RMD160 d00ebe7b3e1735ca3ca559d39b754b06cf4a8d4b SHA1 2d51ec59cf9b5fdec09b26e402f14d6a8caf4aec SHA256 15500f2c0c8e55fe82f937103a2741db6182f259dec5a9d334016781ba928c5f
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.15 (GNU/Linux)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEARECAAYFAkvdW8MACgkQvFcC4BYPU0p37wCfdL/U+C5sL/VnWXGg49vSYrMm
-UJwAoI76rKpXbEwefwVZTLceu0VFaIqK
-=K48i
+iEYEARECAAYFAk+1KUsACgkQvFcC4BYPU0rUBACgtsA0jeynDwC6Cx/4C/zGejMA
+0jwAniT/g6XcQyaltC9t1heM0uViOJzc
+=8cjB
 -----END PGP SIGNATURE-----
