@@ -1,6 +1,6 @@
-# Copyright 1999-2010 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/mecab-ipadic/mecab-ipadic-2.7.0.20070801.ebuild,v 1.9 2010/05/02 11:02:21 aballier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/mecab-ipadic/mecab-ipadic-2.7.0.20070801.ebuild,v 1.10 2012/05/17 16:37:30 aballier Exp $
 
 IUSE="unicode"
 
@@ -11,7 +11,7 @@ HOMEPAGE="http://mecab.sourceforge.net/"
 SRC_URI="mirror://sourceforge/mecab/${MY_P}.tar.gz"
 
 LICENSE="ipadic"
-KEYWORDS="amd64 ~arm hppa ia64 ppc ppc64 sparc x86 ~x86-fbsd"
+KEYWORDS="amd64 ~arm hppa ia64 ppc ppc64 sparc x86 ~amd64-fbsd ~x86-fbsd"
 SLOT="0"
 S="${WORKDIR}/${MY_P}"
 
