@@ -1,6 +1,10 @@
 # ChangeLog for app-dicts/mecab-ipadic
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-dicts/mecab-ipadic/ChangeLog,v 1.26 2010/05/02 11:02:21 aballier Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-dicts/mecab-ipadic/ChangeLog,v 1.27 2012/05/17 16:37:30 aballier Exp $
+
+  17 May 2012; Alexis Ballier <aballier@gentoo.org>
+  mecab-ipadic-2.7.0.20070801.ebuild:
+  keyword ~amd64-fbsd
 
   02 May 2010; Alexis Ballier <aballier@gentoo.org>
   mecab-ipadic-2.7.0.20070801.ebuild:
